Last phase Roadmap

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ AUTH_SECRET=generate-a-random-32-char-string-here
 # OPENCLAW_DIR=/root/.openclaw
 # OPENCLAW_WORKSPACE=/root/.openclaw/workspace
 
+# Model Playground (optional): OpenRouter API key for comparing models
+# OPENROUTER_API_KEY=sk-or-v1-...
+# Or: PLAYGROUND_OPENROUTER_API_KEY=sk-or-v1-...
+
 # Branding (customize for your instance)
 NEXT_PUBLIC_AGENT_NAME=Mission Control
 NEXT_PUBLIC_AGENT_EMOJI=🤖
